# ScamShield

./: .gitignore  README.md  db_to_json.py  dockerfile  main.py  pyproject.toml  setup.py
assets/: template_dataset.json
docker/: python-cuda.dockerfile
