[tool.poetry]
name = "scamshield-train"
version = "0.1.0"
description = ""
authors = ["DACHXY <Danny10132024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
argparse = "^1.4.0"
torch = [
  { url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", markers = "sys_platform == 'win32'"},
  { url = "https://download.pytorch.org/whl/cu121/torch-2.2.1%2Bcu121-cp312-cp312-linux_x86_64.whl", markers = "sys_platform == 'linux'"}
]
transformers = {extras = ["torch"], version = "^4.38.2"}
pydantic = "^2.6.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
